--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                                 <ul>Velocidade máxima: 315 km/h</ul>
                                 <ul>Aceleração de 0 a 100 km/h: 3,4 segundos</ul>
                             </p>
-                            <a href="#" class="btn btn-danger">Ver mais</a> <!-- Botão vermelho -->
+                            <a href="#" class="btn btn-danger">Comprar</a> <!-- Botão vermelho -->
                         </div>
                     </div>
                 </div>
@@ -67,7 +67,7 @@
                                 <ul>Velocidade máxima: 230 km/h</ul>
                                 <ul>Aceleração de 0 a 100 km/h: 7.6 segundos</ul>
                             </p>
-                            <a href="#" class="btn btn-danger">Ver mais</a> <!-- Botão vermelho -->
+                            <a href="#" class="btn btn-danger">Comprar</a> <!-- Botão vermelho -->
                         </div>
                     </div>
                 </div>
@@ -83,7 +83,7 @@
                                 <ul>Velocidade máxima: 290 km/h</ul>
                                 <ul>Aceleração de 0 a 100 km/h: 3,9 segundos</ul>
                             </p>
-                            <a href="#" class="btn btn-danger">Ver mais</a> <!-- Botão vermelho -->
+                            <a href="#" class="btn btn-danger">Comprar</a> <!-- Botão vermelho -->
                         </div>
                     </div>
                 </div>
@@ -93,24 +93,24 @@
             <h2 class="mt-5">Contato</h2>
             <form>
                 <div class="mb-3">
-                    <label for="exampleInputEmail1" class="form-label">Email address</label>
+                    <label for="exampleInputEmail1" class="form-label">Email</label>
                     <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                    <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                    <div id="emailHelp" class="form-text">Nunca compartilharemos seu e-mail com mais ninguém.</div>
                 </div>
                 <div class="mb-3">
-                    <label for="exampleInputPassword1" class="form-label">Password</label>
+                    <label for="exampleInputPassword1" class="form-label">Mensagem</label>
                     <input type="password" class="form-control" id="exampleInputPassword1">
                 </div>
                 <div class="mb-3 form-check">
                     <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                    <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                    <label class="form-check-label" for="exampleCheck1">Quero me identificar</label>
                 </div>
                 <button type="submit" class="btn btn-danger">Enviar</button> <!-- Botão vermelho -->
             </form>
         </section>
     </main>
     <footer class="container-fluid mt-5 mb-3">
-        <p class="text-center">&copy; 2024 - Prof Anderson Vanin</p>
+        <p class="text-center">&copy; 2024 - Iago de Almeida Coelho</p>
     </footer>
 
     <script src="js/bootstrap.bundle.js"></script>
